--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "main": "dist/server.js",
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "openai": "^3.2.1"
   },
